# nbclassic

./: .bowerrc  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.md  RELEASE.md  bower-lite  bower.json  jupyter-nbclassic.desktop  package.json  postinstall.js  pyproject.toml  readthedocs.yml  setup.cfg  setup.py  setupbase.py  webpack.config.js
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: check-release.yml  docs.yml  downstream.yml  enforce-label.yml  flaky-selenium.yml  js.yml  playwright.yml  prep-release.yml  publish-changelog.yml  publish-release.yml  pythonpackage.yml  selenium.yml
docs/: autogen_config.py  doc-requirements.txt  environment.yml  jsdoc_config.json  jsdoc_plugin.js  shimming.md
docs-translations/hi-IN/: README.md
docs-translations/ja-JP/: README.md
docs-translations/ko-KR/: HowtoRun.md  Installation.md  README.md  UIComponents.md
docs-translations/zh-CN/: README.md
docs/source/: comms.rst  conf.py  config_docs.rst  config_overview.rst  contribute_docs.rst  development_faq.rst  frontend_config.rst  index.rst  links.txt  nbclassic.rst  nbclassic_dev_faq.rst  nbclassic_notebook.rst  notebook.rst  public_server.rst  security.rst  template.tpl  troubleshooting.rst  ui_components.rst  user_docs.rst
docs/source/_templates/: sidebar-nav-bs-index.html
docs/source/examples/Notebook/: Connecting with the Qt Console.ipynb  Custom Keyboard Shortcuts.ipynb  Distributing Jupyter Extensions as Python Packages.ipynb  Importing Notebooks.ipynb  JavaScript Notebook Extensions.ipynb  Notebook Basics.ipynb  Running Code.ipynb  Typesetting Equations.ipynb  What is the Jupyter Notebook.ipynb  Working With Markdown Cells.ipynb  examples_index.rst
docs/source/examples/Notebook/nbpackage/nbs/: other.ipynb
docs/source/extending/: bundler_extensions.rst  contents.rst  frontend_extensions.rst  handlers.rst  keymaps.rst  savehooks.rst
git-hooks/: README.md  post-checkout
jupyter-config/jupyter_server_config.d/: notebook_shim.json
nbclassic/: __init__.py  __version__.py  _sysinfo.py  _version.py  handlers.py  jstest.py  nbextensions.py  nbserver.py  notebookapp.py  shim.py  shim_notebook.py  shimconfig.py  shimwarning.py  traits.py
nbclassic/bundler/: bundlerextensions.py  handlers.py  tools.py  zip_bundler.py
nbclassic/bundler/tests/: test_bundler_api.py  test_bundler_tools.py  test_bundlerextension.py
nbclassic/bundler/tests/resources/: empty.ipynb
nbclassic/bundler/tests/resources/another_subdir/: test_file.txt
nbclassic/edit/: handlers.py
nbclassic/i18n/: README.md
nbclassic/i18n/fr_FR/LC_MESSAGES/: nbclassic.po  nbjs.po  nbui.po
nbclassic/i18n/ja_JP/LC_MESSAGES/: nbclassic.po  nbjs.po  nbui.po
nbclassic/i18n/nl/LC_MESSAGES/: nbclassic.po  nbjs.po  nbui.po
nbclassic/i18n/ru_RU/LC_MESSAGES/: nbclassic.po  nbjs.po  nbui.po
nbclassic/i18n/zh_CN/LC_MESSAGES/: nbclassic.po  nbjs.po  nbui.po
nbclassic/notebook/: handlers.py
nbclassic/static/: acc_overwrite.less
nbclassic/static/base/js/: markdown.js  namespace.js  utils.js
nbclassic/static/edit/js/: menubar.js
nbclassic/static/notebook/js/: about.js  actions.js  kernelselector.js  main.js  menubar.js  notebook.js  quickhelp.js  savewidget.js  shortcuteditor.js  tour.js
nbclassic/static/notebook/less/: commandpalette.less  notificationarea.less  renderedhtml.less
nbclassic/static/services/: config.js  contents.js
nbclassic/static/services/sessions/: session.js
nbclassic/static/style/: ipython.less  style.less
nbclassic/static/terminal/js/: main.js
nbclassic/static/tree/js/: main.js  newnotebook.js  notebooklist.js  sessionlist.js  terminallist.js
nbclassic/templates/: browser-open.html  notebook.html  page.html
nbclassic/terminal/: handlers.py
nbclassic/tests/: README.md  launchnotebook.py  test_nbserver.py  test_notebookapp.py  util.js
nbclassic/tests/base/: highlight.js  misc.js  security.js  utils.js
nbclassic/tests/end_to_end/: conftest.py  manual_test_prototyper.py  test_buffering.py  test_clipboard_multiselect.py  test_dashboard_nav.py  test_deletecell.py  test_display_image.py  test_display_isolation.py  test_dualmode_arrows.py  test_dualmode_clipboard.py  test_dualmode_execute.py  test_dualmode_insertcell.py  test_execute_code.py  test_find_and_replace.py  test_interrupt.py  test_kernel_menu.py  test_markdown.py  test_move_multiselection.py  test_multiselect.py  test_notifications.py  test_playwright.py  test_prompt_numbers.py  test_save.py  test_save_as_notebook.py  test_save_readonly_as.py  test_shutdown.py  utils.py
nbclassic/tests/notebook/: attachments.js  display_id.js  dualmode.js  dualmode_merge.js  execute_selected_cells.js  inject_js.js  markdown.js  output.js  roundtrip.js  safe_append_output.js  tags.js
nbclassic/tests/selenium/: conftest.py  quick_selenium.py  test_dashboard_nav.py  test_kernel_menu.py  test_save_as_notebook.py  test_save_readonly_as.py  utils.py
nbclassic/tests/services/: kernel.js  serialize.js
nbclassic/tests/shim/: mockextension.py  test_extension.py  test_nbclassic.py
nbclassic/tree/: handlers.py
nbclassic/view/: __init__.py  handlers.py
patches/: google-caja-sanitizer+1.0.4.patch
tests/: conftest.py  shimconfig_test.py  test_nbserver.py  test_notebookapp.py  test_shim.py
tests/shim/: mockextension.py  test_extension.py  test_nbclassic.py
tools/: build-main.js  build.js  copy-marked.js  copy-remote-dependencies.js  install_pydeps.py  runsuite_repeat.py  secure_notebook.py  security_deprecated.js
tools/tests/: CSS Reference.ipynb  Confined Output.ipynb
