[build-system]
requires = [
  "jupyter_packaging~=0.9,<2",
  "jupyter_server>=1.17.0",
  "babel"
]
build-backend = "jupyter_packaging.build_api"

[tool.check-manifest]
ignore = ["tbump.toml", ".*"]

[tool.pytest.ini_options]
addopts = "--doctest-modules"
norecursedirs = ["confs"]
testpaths = [
    "tests"
]

[tool.jupyter-releaser]
skip = ["check-links", "check-manifest"]

[tool.jupyter-releaser.hooks]
after-bump-version = "python setup.py jsversion"
before-build-python = ["npm install -g po2json"]

[tool.jupyter-releaser.options]
post-version-spec = "dev"
ignore-glob = ["docs/source/examples/Notebook/Working With Markdown Cells.ipynb", "docs-translations/**/README.md", "docs/source/contributing.rst", "docs/source/examples/Notebook/JavaScript Notebook Extensions.ipynb", "CHANGELOG.md", "nbclassic/static/components/**/*.*"]

[tool.tbump.version]
current = "0.5.2"
regex = '''
  (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)
  ((?P<channel>a|b|rc|.dev)(?P<release>\d+))?
'''

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

[[tool.tbump.file]]
src = "nbclassic/_version.py"
