[metadata]
name = nbclassic
version = attr: nbclassic.__version__.__version__
description = Jupyter Notebook as a Jupyter Server extension.
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
author = Jupyter Development Team
author_email = jupyter@googlegroups.com
url = https://jupyter.org
platforms = Linux, Mac OS X, Windows
keywords = ipython, jupyter
classifiers =
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    notebook_shim>=0.1.0
    jupyter_server>=1.17.0

[options.data_files]
etc/jupyter/jupyter_server_config.d =
    jupyter_server_config.d/nbclassic.json


[options.extras_require]
test =
    pytest
    pytest-tornasync
    pytest-console-scripts

[options.entry_points]
console_scripts =
    jupyter-nbclassic = nbclassic.notebookapp:main

[options.packages.find]
exclude =
    docs*,
    tests*

[flake8]
ignore = E, C, W, F401, F403, F811, F841, E402, I100, I101, D400
builtins = c, get_config
exclude =
    .cache,
    .github,
    docs,
    setup.py
