[metadata]
name = nbclassic
version = attr: nbclassic.__version__
description = Jupyter Notebook as a Jupyter Server extension.
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3-Clause
license_files = LICENSE
author = Jupyter Development Team
author_email = jupyter@googlegroups.com
url = https://github.com/jupyter/nbclassic
platforms = Linux, Mac OS X, Windows
keywords = ipython, jupyter, interactive, interpreter, shell, web
classifiers =
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    jinja2
    tornado>=6.1
    # pyzmq>=17 is not technically necessary,
    # but hopefully avoids incompatibilities with Tornado 5. April 2018
    pyzmq>=17
    argon2-cffi
    traitlets>=4.2.1
    jupyter_core>=4.6.1
    jupyter_client>=6.1.1
    ipython_genutils
    jupyter_server>=1.8
    nbformat
    notebook_shim>=0.1.0
    nbconvert>=5
    nest-asyncio>=1.5
    ipykernel # bless IPython kernel for now
    Send2Trash>=1.8.0
    terminado>=0.8.3
    prometheus_client

[options.data_files]
etc/jupyter/jupyter_server_config.d =
    jupyter_server_config.d/nbclassic.json
share/applications =
    jupyter-nbclassic.desktop
share/icons/hicolor/scalable/apps =
    nbclassic.svg

[options.extras_require]
test =
    pytest
    coverage
    requests
    testpath
    nbval
    pytest-playwright
    pytest-cov
    pytest_jupyter
    pytest_tornasync
    requests-unixsocket; sys_platform != "win32"
docs =
    sphinx
    nbsphinx
    sphinxcontrib_github_alt
    sphinx_rtd_theme
    myst-parser
json-logging =
    json-logging

[options.entry_points]
console_scripts =
    jupyter-nbclassic = nbclassic.notebookapp:main
    jupyter-nbclassic-extension = nbclassic.nbextensions:main
    jupyter-nbclassic-serverextension = nbclassic.serverextensions:main
    jupyter-nbclassic-bundlerextension = nbclassic.bundler.bundlerextensions:main

[options.packages.find]
exclude =
    docs*,
    tests*

[flake8]
ignore = E, C, W, F401, F403, F811, F841, E402, I100, I101, D400
builtins = c, get_config
exclude =
    .cache,
    .github,
    docs,
    setup.py
